--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -89,7 +89,7 @@ layout: home
             <div class="col-sm-9">
                 <h2>{{ page.go-head }}</h2>
                 <ul>
-                    <li><a href="https://domains.dotgov.gov/dotgov-web/registration/whois.xhtml">Check .gov
+                    <li><a href="#navbar">Check .gov
                             availability</a></li>
                     <li><a href="https://home.dotgov.gov/registration/authorization-templates/">Complete
                             authorization letter</a> (send to <a href="mailto:registrar@dotgov">registrar@dotgov</a>)
