--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,14 +1,22 @@
 <div class="jumbotron">
     <div class="container">
         <div class="row">
-            <div class="col-sm-9">
+            <div class="col-sm-12">
                 <h1 class="display-4">{{ page.title }}</h1>
                 {% if page.description %}
                 <p class="lead">{{ page.description }}</p>
                 {% endif %}
-            </div>
-            <div class="col-sm-3">
+                <p>Search available .gov domains (example: <a href="https://dotgov.gov">dotgov.gov</a>): </p>
+                <form class="domain-form form-inline">
+                    <div class="form-group">
+                        <input type="text" class="search-domains form-control form-control-lg">
+                        <button type="submit" class="btn btn-outline-dark btn-lg ml-2"><i
+                                class="fa-solid fa-magnifying-glass"></i></button>
+                    </div>
+                </form>
+                <div class="url-result"></div>
             </div>
         </div>
     </div>
 </div>
+<script src="/js/domain-search.js"></script>
