--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,31 +2,34 @@
     <div class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <ul class="list-unstyled">
-                        {% for item in site.data.nav-footer-1.docs %}
-                        {% if item.url %}
-                        <li><a class="" href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
-                        {% endif %}
-                        {% endfor %}
+                        {% for item in site.data.nav-footer-1.docs %} {% if item.url %}
+                        <li><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+                        {% endif %} {% endfor %}
                     </ul>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <ul class="list-unstyled">
-                        {% for item in site.data.nav-footer-2.docs %}
-                        {% if item.url %}
-                        <li><a class="" href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
-                        {% endif %}
-                        {% endfor %}
+                        {% for item in site.data.nav-footer-2.docs %} {% if item.url %}
+                        <li><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+                        {% endif %} {% endfor %}
                     </ul>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <ul class="list-unstyled">
-                        {% for item in site.data.nav-footer-3.docs %}
-                        {% if item.url %}
-                        <li><a class="" href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
-                        {% endif %}
-                        {% endfor %}
+                        {% for page in site.topics %} {% if page.title != 'Template' %}
+                        <li>
+                            <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
+                        </li>
+                        {% endif %} {% endfor %}
+                    </ul>
+                </div>
+                <div class=" col-sm-3">
+                    <ul class="list-unstyled">
+                        {% for item in site.data.nav-footer-3.docs %} {% if item.url %}
+                        <li><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+                        {% endif %} {% endfor %}
                     </ul>
                 </div>
             </div>
@@ -34,10 +37,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <p><a href="{{ site.baseurl }}/">{{ site.title }}</a></p>
+                    <div class="footer-connect">
+                        <div>
+                            {% include social.html size="footer" %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p><a href="{{ site.baseurl }}">{{ site.title }}</a></p>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </footer>
 {% include js.html %}
