--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,26 @@
     <div class="footer">
         <div class="container">
             <div class="row">
+                <div class="col-sm-12">
+                    <h5>{{ site.title }}</h5>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-sm-3">
                     <ul class="list-unstyled">
                         {% for item in site.data.nav-footer-1.docs %} {% if item.url %}
-                        <li><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+                        <li>
+                            <a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
+                        </li>
                         {% endif %} {% endfor %}
                     </ul>
                 </div>
                 <div class="col-sm-3">
                     <ul class="list-unstyled">
                         {% for item in site.data.nav-footer-2.docs %} {% if item.url %}
-                        <li><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+                        <li>
+                            <a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
+                        </li>
                         {% endif %} {% endfor %}
                     </ul>
                 </div>
@@ -28,7 +37,9 @@
                 <div class=" col-sm-3">
                     <ul class="list-unstyled">
                         {% for item in site.data.nav-footer-3.docs %} {% if item.url %}
-                        <li><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+                        <li>
+                            <a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
+                        </li>
                         {% endif %} {% endfor %}
                     </ul>
                 </div>
@@ -46,14 +57,15 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <p><a href="{{ site.baseurl }}">{{ site.title }}</a></p>
+                    <p>
+                        <a href="https://govfresh.com">GovFresh</a>
+                    </p>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+</div>
 </footer>
 {% include js.html %}
 </body>
-
 </html>
